[package]
name = "encrypto-core"
version = "0.1.0"
edition = "2024"
authors = ["1-void <root@1-void.com>"]
license = "MIT"
repository = "https://github.com/1-void/encrypto"
homepage = "https://github.com/1-void/encrypto"
description = "Core types for the encrypto PQC-only OpenPGP toolchain"

[dependencies]
