[package]
name = "encrypto-pgp"
version = "0.1.0"
edition = "2024"
authors = ["1-void <root@1-void.com>"]
license = "MIT"
repository = "https://github.com/1-void/encrypto"
homepage = "https://github.com/1-void/encrypto"
description = "PQC-only OpenPGP backend implementation for encrypto"

[dependencies]
encrypto-core = { path = "../encrypto-core" }
encrypto-policy = { path = "../encrypto-policy" }
tempfile = "3"
dirs = "5"
sequoia-openpgp = { version = "2.2.0-pqc.1", default-features = false, features = ["crypto-openssl"] }
