[package]
name = "encrypto-policy"
version = "0.1.0"
edition = "2024"
authors = ["1-void <root@1-void.com>"]
license = "MIT"
repository = "https://github.com/1-void/encrypto"
homepage = "https://github.com/1-void/encrypto"
description = "PQC-only OpenPGP policy checks for encrypto"

[dependencies]
sequoia-openpgp = { version = "2.2.0-pqc.1", default-features = false, features = ["crypto-openssl"] }
