[package]
name = "qpgp-cli"
version = "0.1.0-beta.1"
edition = "2024"
authors = ["1-void <root@1-void.com>"]
license = "MIT"
repository = "https://github.com/1-void/QPGP"
homepage = "https://github.com/1-void/QPGP"
description = "PQC-only OpenPGP CLI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
qpgp-core = { path = "../qpgp-core" }
qpgp-pgp = { path = "../qpgp-pgp" }
