[package]
name = "qpgp-pgp"
version = "0.1.0"
edition = "2024"
authors = ["1-void <root@1-void.com>"]
license = "MIT"
repository = "https://github.com/1-void/QPGP"
homepage = "https://github.com/1-void/QPGP"
description = "PQC-only OpenPGP backend implementation for QPGP"

[dependencies]
qpgp-core = { path = "../qpgp-core" }
qpgp-policy = { path = "../qpgp-policy" }
tempfile = "3"
dirs = "5"
libc = "0.2"
sequoia-openpgp = { version = "2.2.0-pqc.1", default-features = false, features = ["crypto-openssl"] }
